--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,17 +10,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SurveyApplication">
         <activity
+            android:label="Family Members Detail"
             android:name=".FamilyMembersActivity"
             android:exported="false" />
+
         <activity
-            android:name=".MainActivity2"
-            android:exported="false" />
-        <activity
+            android:label="Family Head Detail"
             android:name=".FamilyHeadActivity"
             android:exported="false" />
         <activity
             android:name=".SplashActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/MyTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,7 +30,8 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/MyTheme"/>
 
         <meta-data
             android:name="preloaded_fonts"
